--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Professional Resume</title>
+  <title>HLEB YARMOLCHYK - Professional Resume</title>
   <link rel="stylesheet" href="resume.css">
   <style>
     /* Additional styles for web viewing */
